Switch to the new metadata